third_party/move/move-compiler-v2/tests/visibility-checker/package_visibility_diff_addr.exp

Diagnostics:
error: public(package) function `0x42::A::bar` cannot be called from function `0x43::B::foo` because they are from different addresses
   ┌─ tests/visibility-checker/package_visibility_diff_addr.move:3:25
   │
 3 │     public(package) fun bar() {}
   │                         ^^^ callee
   ·
10 │         A::bar()
   │         -------- called here

error: public(package) function `0x42::A::bar` cannot be called from function `0x43::B::bar` because they are from different addresses
   ┌─ tests/visibility-checker/package_visibility_diff_addr.move:3:25
   │
 3 │     public(package) fun bar() {}
   │                         ^^^ callee
   ·
14 │         A::bar()
   │         -------- called here

error: public(package) function `0x42::A::bar` cannot be called from function `0x43::B::baz` because they are from different addresses
   ┌─ tests/visibility-checker/package_visibility_diff_addr.move:3:25
   │
 3 │     public(package) fun bar() {}
   │                         ^^^ callee
   ·
18 │         A::bar()
   │         -------- called here
